native/rustystream-ffi/binding.h

#include <stdarg.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>


int32_t stream_subscribe(int64_t port, uint64_t n);

int32_t stream_unsubscribe(void);